fix the color and alignement of zoom radiobox svg in pdf settings

--- a/src/renderer/assets/styles/reader-app.scss
+++ b/src/renderer/assets/styles/reader-app.scss
@@ -798,12 +798,14 @@ p.chapters_description {
     height: 1.2rem;
     width: 14rem;
     cursor: pointer;
+    align-items: center;
 
     & svg {
       height: 1rem;
       width: 1rem;
       margin-left: -1.3rem;
       margin-right: 0.3rem;
+      fill: var(--color-text-primary);
     }
   }
 
